// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PermissionsPanel/> error 1`] = `
<div
  className="alert alert-danger"
  role="alert"
>
  There is an error.
</div>
`;

exports[`<PermissionsPanel/> loading 1`] = `
<span
  className=""
>
  <i
    aria-hidden="true"
    className="fa fa-spinner fa-pulse"
  />
   
  Loading...
</span>
`;

exports[`<PermissionsPanel/> rendered with details 1`] = `
<div
  className="row"
>
  <div
    className="col-md-8 col-xs-12"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        Permissions Panel Title
      </div>
      <div
        className="permissions-assignment-panel panel-body"
      >
        <br />
        <button
          className="pull-right alert-button btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
  <div
    className="col-md-4 col-xs-12"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        User Details
      </div>
      <div
        className="panel-body"
      >
        <div>
          No user selected.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsPanel/> rendered without details 1`] = `
<div
  className="row"
>
  <div
    className="col-md-12 col-xs-12"
  >
    <div
      className="panel panel-default"
    >
      <div
        className="panel-heading"
      >
        Permissions Panel Title
      </div>
      <div
        className="permissions-assignment-panel panel-body"
      >
        <br />
        <button
          className="pull-right alert-button btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
